# TimerApp

./: .gitattributes  .gitignore  CMakeLists.txt  Git.gitignore  countdownwindow.cpp  countdownwindow.h  countdownwindow.ui  globalusage.cpp  globalusage.h  homewindow.cpp  homewindow.h  homewindow.ui  main.cpp  timerlogic.cpp  timerlogic.h  timerwindow.cpp  timerwindow.h  timerwindow.ui
test/: test_timerlogic.cpp
tests/: test_all.cpp  test_countdownwindow.cpp  test_countdownwindow.h  test_homewindow.cpp  test_homewindow.h  test_timerlogic.cpp  test_timerlogic.h  test_timerwindow.cpp  test_timerwindow.h
